[gd_scene load_steps=3 format=3 uid="uid://4m5oep46e0ms"]

[ext_resource type="Script" path="res://menu.gd" id="1_hd60y"]

[sub_resource type="FontFile" id="FontFile_yp4s8"]
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/19/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hd60y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.5
offset_top = -50.0
offset_right = 151.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Start Game
"

[node name="InstructionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("FontFile_yp4s8")
theme_override_font_sizes/font_size = 40
text = "Memory Gallery Game
Tap Start to begin
"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
